Fixes font sizing issues on mobile

--- a/src/pages/details/details.module.css
+++ b/src/pages/details/details.module.css
@@ -84,7 +84,7 @@
     height: 40%;
     align-items: center;
     padding: 0px 10px;
-    width: max-content;
+    width: 100%;
     text-align: center;
   }
 
